--- a/index.html
+++ b/index.html
@@ -87,7 +87,18 @@
 										<li><a href="https://github.com/Fruitful-Esther/POWER-BI-ADVENTURE-SALES-DATA-ANALYSIS" class="button">View Project</a></li>
 									</ul>
 								</article>
-								
+								<article>
+									<header>
+										
+										<h2><a href="#">AIRCRAFT FUEL CONSUMPTION <br />
+										DATA ANALYSIS FOR AIRLINE</a></h2>
+									</header>
+									<a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption" class="image fit"><img src="images/PYC LOGO.png" alt="" /></a>
+									<p>Data Analysis to measure the consumption of fuel per aircraft for an airline</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Fruitful-Esther/Coffee-Sales-Excel-Data-Analysis" class="button">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
