--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										<h2><a href="#">AIRCRAFT FUEL CONSUMPTION <br />
 										DATA ANALYSIS FOR AIRLINE</a></h2>
 									</header>
-									<a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption" class="image fit"><img src="images/PYC LOGO.png" alt="" /></a>
+									<a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption" class="image fit"><img src="images/PYC LOGO.PNG" alt="" /></a>
 									<p>Data Analysis to measure the consumption of fuel per aircraft for an airline</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Fruitful-Esther/Coffee-Sales-Excel-Data-Analysis" class="button">View Project</a></li>
