--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>FTL DATA ANALYSIS MASTERCLASS<br />
-						PORTFOLIO COACHING</h1>
+						PORTFOLIO PROJECTS </h1>
 						<p>FTL Data Analysis Master Class equips you with knowledge in Python, Power BI, Microsoft Excel, Tableau, SQL e.t.c.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -93,10 +93,10 @@
 										<h2><a href="#">AIRCRAFT FUEL CONSUMPTION <br />
 										DATA ANALYSIS FOR AIRLINE</a></h2>
 									</header>
-									<a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption" class="image fit"><img src="images/PYC LOGO.PNG" alt="" /></a>
+									<a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption" class="image fit"><img src="images/aircraft.JPG" alt="" /></a>
 									<p>Data Analysis to measure the consumption of fuel per aircraft for an airline</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Fruitful-Esther/Coffee-Sales-Excel-Data-Analysis" class="button">View Project</a></li>
+										<li><a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption/blob/main/AIRCRAFT_FUEL_CONSUMPTION.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
