--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">AIRCRAFT FUEL CONSUMPTION ANALYSIS <br />
-										USING PYTHON </a></h2>
+										<h2><a href="a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption/blob/main/AIRCRAFT_FUEL_CONSUMPTION.ipynb">AIRCRAFT FUEL CONSUMPTION ANALYSIS <br />
+										PYTHON PROJECT </a></h2>
 									</header>
-									<a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption" class="image fit"><img src="images/aircraft.JPG" alt="" /></a>
+									<a href="a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption/blob/main/AIRCRAFT_FUEL_CONSUMPTION.ipynb" class="image fit"><img src="images/aircraft.JPG" alt="" /></a>
 									<p>Data Analysis to measure the consumption of fuel per aircraft for an airline</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Fruitful-Esther/Aircraft-Fuel-Consumption/blob/main/AIRCRAFT_FUEL_CONSUMPTION.ipynb" class="button">View Project</a></li>
